Fix button with dropdown spacing

--- a/src/components/ButtonWithDropdown/_index.scss
+++ b/src/components/ButtonWithDropdown/_index.scss
@@ -2,7 +2,7 @@
   width: fit-content;
   display: inline-block;
 
-  svg {
+  &__arrow {
     height: 0.5em;
     width: 0.5em;
   }
