--- a/src/components/TextWithIcon/_index.scss
+++ b/src/components/TextWithIcon/_index.scss
@@ -1,6 +1,5 @@
 .oec-text-with-icon {
   display: block;
-  margin-right: 1rem;
 }
 
 .oec-text-with-icon__icon {
